# Multimodal-Deception-Detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_cv_training.py  run_training.py  run_training_avt.py  run_training_gru.py  test_model.py
configs/: config_at  config_av  config_avt  config_template  config_vt
dataset/: audio_wave_dataset.py  copy_clips_raw.py  extract_audio.py  multimodal_dataset.py  openface_dataset.py  opensmile_dataset.py  organize_ur_lying.py  pretrained_multimodal_dataset.py  seq_length_stats.py  test_urlying_dataset.py  text_stats.py  transcribe_clips.py  video_clip_dataset.py  video_stats.py  whisper_dataset.py  whisper_stats.py
model/: BiGRU.py  BiLSTM.py  LateFusionBiGRU.py  LateFusionBiLSTM.py  late_fusion_train.py  pretrained_encoders.py  pretrained_late_fusion.py  train.py
open_face/: au_stats.py
