[project]
name = "multimodal-deception-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dataset = [
    "scipy>=1.17.1",
    "matplotlib>=3.9.0",
]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]
